--- a/news/templates/news_details.html
+++ b/news/templates/news_details.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load comments %}
 {% block content%}
 
 
@@ -16,9 +16,23 @@
     <img src="{{ news.image.url }}" style="display: block;margin: auto;max-width: 100%;
     height: auto;padding-bottom: 2cm;"/>
 {% endif %}
-{% endblock %}
+
+</div>
+<div>
+    <pre>
+
+
+
+
+
+
+
+
+
+
+    </pre>
 </div>
 
-
+{% endblock %}
 
 
