--- a/accounts/templates/rough.html
+++ b/accounts/templates/rough.html
@@ -29,17 +29,18 @@
         <div class="pull-right">
           <ul class="nav navbar-nav">
               {% if user.is_authenticated %}
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">{{ user.username }}<span class="caret"></span></a>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href=/account/logout/>logout</a></li>
+                        <li><a href="#">logout</a></li>
                     </ul>
                 </li>
               {% else %}
-              <li><a href="/account/login/" class="btn navbar-btn">Sign In</a></li>
-              <li><a href="/account/signup/" class="btn navbar-btn">Sign up</a></li>
+              <li><a href="{% url 'accounts:login'%}" class="btn navbar-btn">Sign In</a></li>
               {% endif %}
-              <li><input id="q" type="search"></li>
           </ul>
         </div>
-  </div>
- </nav>
+
+
+
+
+
