--- a/news/templates/Sidebar.html
+++ b/news/templates/Sidebar.html
@@ -2,7 +2,7 @@
 <nav class="w3-sidebar w3-bar-block w3-collapse w3-large w3-theme-l5 " style="z-index:3;width:250px;margin-top:43px;" id="mySidebar">
   <h4 class="w3-bar-item"><b>Category</b></h4>
   {% for newc in news_cat_list %}
-    <a href="{% url 'news-cat-view' newc.type %}" class="w3-bar-item w3-button w3-hover-black">{{ newc.type }}</a>
+    <a href="{% url 'news:news-cat-view' newc.type %}" class="w3-bar-item w3-button w3-hover-black">{{ newc.type }}</a>
   {% endfor %}
 </nav>
 
