--- a/news/templates/news_cat.html
+++ b/news/templates/news_cat.html
@@ -1,19 +1,43 @@
 {% extends "base.html" %}
-
+{% block new%}
+<script src="http://code.jquery.com/jquery-latest.min.js"
+        type="text/javascript"></script>
+<script>
+$(document).ready( function() {
+var w = "{{ type1 }}";
+$('#q' ).keyup( function() {
+var q = $('#q').val();
+console.log(q);
+console.log(w);
+$.ajax({
+    type: "GET",
+    url: "/home/search2/",
+    dataType: "html",
+    data: {'q': q ,'w':w},
+    success: function(data) {
+                         $('#results').html(data);
+},
+});
+});
+});
+</script>
+{% endblock %}
 {% block content%}
-
+<div class="w3-main" style="margin-left:250px">
+  <div id="results">
   {% for new in news_cat %}
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
       <div class="w3-container">
-        <h3><a href="{% url 'news-details' new.id %}" class="w3-text-teal w3-hover-white">{{ new.title }}</a></h3>
+        <h3><a href="{% url 'news:news-details' new.news_type.type new.slug %}" class="w3-text-teal w3-hover-white">{{ new.title }}</a></h3>
         <p>{{ new.content|truncatewords:25 }}</p>
-          <a href="{% url 'news-details' new.id %}" class="w3-text-teal w3-hover-white">Read more</a>
+          <a href="{% url 'news:news-details' new.news_type.type new.slug %}" class="w3-text-teal w3-hover-white">Read more</a>
       </div>
     </div>
   </div>
  {% endfor %}
-
+</div>
+</div>
 {% endblock %}
 
 
