added pagination and partial comments

--- a/news/templates/news_details.html
+++ b/news/templates/news_details.html
@@ -1,7 +1,29 @@
 {% extends "base.html" %}
 {% load comments %}
+{% load social_share %}
 {% block content%}
-
+<script>
+$(document).ready( function() {
+$('#q' ).keyup( function() {
+var q = $('#q').val();
+console.log(q);
+$.ajax({
+    type: "GET",
+    url: "/home/search/",
+    dataType: "html",
+    data: {'q': q },
+    success: function(data) {
+                         $('#results').html(data);
+},
+});
+});
+});
+</script>
+<style>
+#id_honeypot {
+    display: none;
+}
+</style>
 
 
   <div class="w3-row w3-padding-64">
@@ -15,6 +37,25 @@
 {% if news.image %}
     <img src="{{ news.image.url }}" style="display: block;margin: auto;max-width: 100%;
     height: auto;padding-bottom: 2cm;"/>
+{% endif %}
+<div id="results">
+{% render_comment_list for news.news news.id %}
+</div>
+{% if user.is_authenticated %}
+    {% get_comment_form for object as form %}
+    <form action="{% comment_form_target %}" onsubmit="return false;" method="POST">
+    {% csrf_token %}
+    {{ form.comment }}
+    {{ form.honeypot }}
+    {{ form.content_type }}
+    {{ form.object_pk }}
+    {{ form.timestamp }}
+    {{ form.security_hash }}
+    <input type="hidden" name="next" value="{% url 'news:news-details' news.news_type.type news.slug %}" />
+    <input type="submit" value="Add comment" id="id_submit" />
+    </form>
+{% else %}
+    <p>Please <a href="/account/login/">log in</a> to leave a comment.</p>
 {% endif %}
 
 </div>
