--- a/news/templates/news_list.html
+++ b/news/templates/news_list.html
@@ -23,18 +23,39 @@ $.ajax({
 {% block content%}
 <div class="w3-main" style="margin-left:250px">
 <div id="results">
-
-  {% for new in news_list %}
-  <div class="w3-row w3-padding-64">
-    <div class="w3-container">
+  {% for new in news %}
+    <div class="w3-row w3-padding-64">
       <div class="w3-container">
-        <h3><a href="{% url 'news:news-details' new.news_type.type new.slug %}" class="w3-text-teal w3-hover-white">{{ new.title }}</a></h3>
-        <p>{{ new.content|truncatewords:25 }}</p>
+        <div class="w3-container">
+          <h3><a href="{% url 'news:news-details' new.news_type.type new.slug %}" class="w3-text-teal w3-hover-white">{{ new.title }}</a></h3>
+          <p>{{ new.content|truncatewords:25 }}</p>
           <a href="{% url 'news:news-details' new.news_type.type new.slug %}" class="w3-text-teal w3-hover-white">Read more</a>
+        </div>
       </div>
     </div>
-  </div>
- {% endfor %}
+  {% endfor %}
+  {% if is_paginated %}
+  <ul class="pagination">
+    {% if page_obj.has_previous %}
+      <li><a href="?page={{ page_obj.previous_page_number }}">&laquo;</a></li>
+    {% else %}
+      <li class="disabled"><span>&laquo;</span></li>
+    {% endif %}
+    {% for i in paginator.page_range %}
+      {% if page_obj.number == i %}
+        <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+      {% else %}
+        <li><a href="?page={{ i }}">{{ i }}</a></li>
+      {% endif %}
+    {% endfor %}
+    {% if page_obj.has_next %}
+      <li><a href="?page={{ page_obj.next_page_number }}">&raquo;</a></li>
+    {% else %}
+      <li class="disabled"><span>&raquo;</span></li>
+    {% endif %}
+  </ul>
+  {% endif %}
+
 </div>
 </div>
 
