--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -12,6 +12,9 @@
     <style>
         html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     </style>
+    {% block new %}
+    {% endblock %}
+
 </head>
 <body>
 
@@ -20,27 +23,39 @@
 {% endblock %}
 
 
+{% block side %}
+  {% include 'Sidebar.html' %}
+{% endblock %}
 <!-- Main content: shift it to the right by 250 pixels when the sidebar is visible -->
 <div class="w3-main" style="margin-left:250px">
 
 
+
+<div id="main-content">
 {% block content%}
 
 {% endblock %}
 
+{% block extra_js %}
+{% endblock %}
+
+
+</div>
+
+{% block comment %}
+{% endblock %}
 {% block foot %}
-  {% include 'footer.html' %}
 {% endblock %}
 
 </div>
+
+
 <script>
 // Get the Sidebar
 var mySidebar = document.getElementById("mySidebar");
 
-// Get the DIV with overlay effect
 var overlayBg = document.getElementById("myOverlay");
 
-// Toggle between showing and hiding the sidebar, and add overlay effect
 function w3_open() {
     if (mySidebar.style.display === 'block') {
         mySidebar.style.display = 'none';
