--- a/news/templates/Navbar.html
+++ b/news/templates/Navbar.html
@@ -31,6 +31,7 @@
               {% if user.is_authenticated %}
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">{{ user.username }}<span class="caret"></span></a>
                     <ul class="dropdown-menu">
+                        <li><a href=/account/profileedit/>Profile Edit</a></li>
                         <li><a href=/account/logout/>logout</a></li>
                     </ul>
                 </li>
