--- a/news/templates/footer.html
+++ b/news/templates/footer.html
@@ -7,7 +7,7 @@
 
     <div class="w3-container w3-theme-l1">
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-        <form class="form-horizontal" role="form" action="/home/letter/" method="post" id="NewsletterForm">
+        <form class="form-horizontal" role="form" action="/letter/" method="post" id="NewsletterForm">
             {% csrf_token %}
           <div class="form-group">
             <label class="col-lg-3 control-label">email:</label>
