detail page error removed

--- a/news/templates/news_cat.html
+++ b/news/templates/news_cat.html
@@ -11,7 +11,7 @@ console.log(q);
 console.log(w);
 $.ajax({
     type: "GET",
-    url: "/home/search2/",
+    url: "/search2/",
     dataType: "html",
     data: {'q': q ,'w':w},
     success: function(data) {
