--- a/news/templates/news_list2.html
+++ b/news/templates/news_list2.html
@@ -7,7 +7,7 @@
 <br/>
 <span class="hint">Type in a query string to search for users</span>
 <div class="margin">
-<span id="spinner"><img src="http://upload.wikimedia.org/wikipedia/commons/d/de/Ajax-loader.gif"/></span>
+<span id="spinner"><img src="https://upload.wikimedia.org/wikipedia/commons/d/de/Ajax-loader.gif"/></span>
 <div id="results"></div>
 </div>
 </div>
