--- a/news/templates/news_list.html
+++ b/news/templates/news_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block new%}
-<script src="http://code.jquery.com/jquery-latest.min.js"
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"
         type="text/javascript"></script>
 <script>
 $(document).ready( function() {
