--- a/news/templates/Navbar.html
+++ b/news/templates/Navbar.html
@@ -10,22 +10,22 @@
  <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <a class="navbar-brand" href="/">NewsCorner</a>
     </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1
-        <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Page 1-1</a></li>
-          <li><a href="#">Page 1-2</a></li>
-          <li><a href="#">Page 1-3</a></li>
-        </ul>
-      </li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
-    </ul>
+    <!--<ul class="nav navbar-nav">-->
+      <!--<li class="active"><a href="#">Home</a></li>-->
+      <!--<li class="dropdown">-->
+        <!--<a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1-->
+        <!--<span class="caret"></span></a>-->
+        <!--<ul class="dropdown-menu">-->
+          <!--<li><a href="#">Page 1-1</a></li>-->
+          <!--<li><a href="#">Page 1-2</a></li>-->
+          <!--<li><a href="#">Page 1-3</a></li>-->
+        <!--</ul>-->
+      <!--</li>-->
+      <!--<li><a href="#">Page 2</a></li>-->
+      <!--<li><a href="#">Page 3</a></li>-->
+    <!--</ul>-->
         <div class="pull-right">
           <ul class="nav navbar-nav">
               {% if user.is_authenticated %}
@@ -39,7 +39,7 @@
               <li><a href="/account/login/" class="btn navbar-btn">Sign In</a></li>
               <li><a href="/account/signup/" class="btn navbar-btn">Sign up</a></li>
               {% endif %}
-              <li><input id="q" type="search"></li>
+              <li><input id="q" type="search" placeholder="Search"></li>
           </ul>
         </div>
   </div>
