--- a/news/templates/footer.html
+++ b/news/templates/footer.html
@@ -1,5 +1,5 @@
-<div class="w3-bottom">
-<form id="myFooter" class="w3-display-bottom">
+
+<form id="myFooter">
     <div class="w3-container w3-theme-l2 w3-padding-32 ">
       <h4>Footer</h4>
     </div>
@@ -25,4 +25,3 @@
         </form>
     </div>
   </footer>
-</div>
