--- a/news/templates/news_cat.html
+++ b/news/templates/news_cat.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+    <title>{{ type1 }}</title>
+{% endblock %}
 {% block new%}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"
         type="text/javascript"></script>
