--- a/accounts/templates/profile_edit.html
+++ b/accounts/templates/profile_edit.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base2.html" %}
 {% block content %}
 <div class="container">
     <h1>Edit Profile</h1>
@@ -26,18 +26,18 @@
           <div class="form-group">
             <label class="col-lg-3 control-label">Last name:</label>
             <div class="col-lg-8">
-              <input class="form-control" type="text" value="{{ user.last_name }}" name="lastname">>
+              <input class="form-control" type="text" value="{{ user.last_name }}" name="lastname">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-lg-3 control-label">Email:</label>
             <div class="col-lg-8">
-              <input class="form-control" type="text" value="{{ user.email }}" name="email">>
+              <input class="form-control" type="text" value="{{ user.email }}" name="email">
             </div>
           </div>
 
-              <input class="form-control" type="hidden" value="{{ user.username }}" name="username">>
+              <input class="form-control" type="hidden" value="{{ user.username }}" name="username">
 
           <div class="form-group">
             <label class="col-md-3 control-label"></label>
