--- a/accounts/templates/signup2.html
+++ b/accounts/templates/signup2.html
@@ -1,4 +1,7 @@
-{% extends 'base2.html' %}
+{% extends "base2.html" %}
+
+{% load i18n %}
+
 <style>
   body{
     background-color: #525252;
@@ -13,12 +16,23 @@
 }
 </style>
 {% block content %}
-  <div class="container">
+
+
+<div class="col-xs-12" style="height:150px;"></div>
+<div>
+<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+  {% csrf_token %}
+    {% csrf_token %}
+    {% if form.errors %}
+        {% for value in form.errors.values %}<p>{{ value }}<br></p>{% endfor %}
+    {% endif %}
+    <div></div>
+    <div class="container centered">
         <div class="row centered-form">
-        <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
+        <div class="col-xs-12 col-sm-8 col-md-8 col-sm-offset-2 col-md-offset-2 centered">
         	<div class="panel panel-default">
         		<div class="panel-heading">
-			    		<h3 class="panel-title">Please sign up for Bootsnipp <small>It's free!</small></h3>
+			    		<h3 class="panel-title">Please sign up for NewsCorner <small>It's free!</small></h3>
 			 			</div>
 			 			<div class="panel-body">
 			    		<form role="form" METHOD="post" action="" id="SignupForm">
@@ -51,6 +65,14 @@
 			    	</div>
 	    		</div>
     		</div>
-    	</div>
+    	</div><div class="col-xs-12" style="height:300px;"></div>
+
     </div>
+  {% if redirect_field_value %}
+  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+  {% endif %}
+</form>
+</div>
+</div>
+
 {% endblock %}
