--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,4 +1,4 @@
-{% extends 'base2.html' %}
+{% extends 'base4.html' %}
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 <style>
   body {
@@ -39,6 +39,9 @@
     line-height: 300%;
   }
 </style>
+{% block side %}
+
+{% endblock %}
 {% block content %}
 <div class="col-xs-12" style="height:150px;"></div>
 <div class="container">
