--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -1,4 +1,4 @@
-{% extends 'base2.html' %}
+{% extends 'base4.html' %}
 <style>
   body{
     background-color: #525252;
@@ -12,6 +12,9 @@
 	box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
 }
 </style>
+{% block side %}
+
+{% endblock %}
 {% block content %}
   <div class="container">
         <div class="row centered-form">
