--- a/accounts/templates/signup2.html
+++ b/accounts/templates/signup2.html
@@ -1,4 +1,4 @@
-{% extends "base2.html" %}
+{% extends "base4.html" %}
 
 {% load i18n %}
 
@@ -15,6 +15,9 @@
 	box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
 }
 </style>
+{% block side %}
+
+{% endblock %}
 {% block content %}
 
 
