--- a/accounts/templates/base4.html
+++ b/accounts/templates/base4.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    {% block title %}
+        <title>Title</title>
+    {% endblock %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -11,35 +13,64 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
+        html, body {
+            height: 100%;
+        }
+        .page-wrap {
+            min-height: 75%;
+         /* equal to footer height */
+            margin-bottom: auto;
+            }
+        .page-wrap:after {
+         content: "";
+           display: block;
+           }
+        .site-footer, .page-wrap:after {
+          height: auto;
+            }
+        .site-footer {
+          background: orange;
+        }
     </style>
-    {% block new %}
-    {% endblock %}
-
 </head>
+
 <body>
-
+<div class="page-wrap">
 {% block Nav %}
-  {% include 'Navbar.html' %}
+  {% include 'Navbar2.html' %}
 {% endblock %}
-
-
-
-
+{% block side %}
+    {% include 'Sidebar.html' %}
+{% endblock %}
+<div class="w3-main" style="margin-left:250px">
+    <br>
+    <br>
 {% block content%}
 
 {% endblock %}
 
-
-{% block footer %}
-  {% include 'footer.html' %}
+{% block extra_js %}
 {% endblock %}
+
+{% block comment %}
+{% endblock %}
+
+</div>
+</div>
+{% block foot %}
+    {% include 'footer.html' %}
+{% endblock %}
+
+
 
 <script>
 // Get the Sidebar
 var mySidebar = document.getElementById("mySidebar");
 
+// Get the DIV with overlay effect
 var overlayBg = document.getElementById("myOverlay");
 
+// Toggle between showing and hiding the sidebar, and add overlay effect
 function w3_open() {
     if (mySidebar.style.display === 'block') {
         mySidebar.style.display = 'none';
@@ -56,5 +87,6 @@ function w3_close() {
     overlayBg.style.display = "none";
 }
 </script>
+
 </body>
 </html>
