--- a/accounts/templates/profile_edit.html
+++ b/accounts/templates/profile_edit.html
@@ -1,4 +1,7 @@
-{% extends "base2.html" %}
+{% extends "base4.html" %}
+{% block side %}
+
+{% endblock %}
 {% block content %}
 <div class="container">
     <h1>Edit Profile</h1>
