--- a/news/templates/Sidebar.html
+++ b/news/templates/Sidebar.html
@@ -1,9 +1,24 @@
+<style>
+  .w3-sidebar {
+    z-index: 0;
+  width: 250px;
+  top: 43px;
+  bottom: 0;
+  height: inherit;
+}
+</style>
+
 <!-- Sidebar -->
-<nav class="w3-sidebar w3-bar-block w3-collapse w3-large w3-theme-l5 " style="z-index:3;width:250px;margin-top:43px;" id="mySidebar">
+<nav class="w3-sidebar w3-bar-block w3-collapse w3-large w3-theme-l5 " id="mySidebar">
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-right w3-xlarge w3-padding-large w3-hover-black w3-hide-large" title="Close Menu">
+    <i class="fa fa-remove"></i>
+  </a>
+  <br>
   <h4 class="w3-bar-item"><b>Category</b></h4>
   {% for newc in news_cat_list %}
     <a href="{% url 'news:news-cat-view' newc.type %}" class="w3-bar-item w3-button w3-hover-black">{{ newc.type }}</a>
   {% endfor %}
 </nav>
 
+<!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
