--- a/news/templates/base.html
+++ b/news/templates/base.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
-    </style>
+
+  </style>
     {% block new %}
     {% endblock %}
 
@@ -23,17 +24,10 @@
 {% block Nav %}
   {% include 'Navbar.html' %}
 {% endblock %}
-
-
 {% block side %}
   {% include 'Sidebar.html' %}
 {% endblock %}
-<!-- Main content: shift it to the right by 250 pixels when the sidebar is visible -->
 <div class="w3-main" style="margin-left:250px">
-
-
-
-<div id="main-content">
 {% block content%}
 
 {% endblock %}
@@ -42,38 +36,19 @@
 {% endblock %}
 
 
-</div>
+
 
 {% block comment %}
 {% endblock %}
-{% block foot %}
-    {% include 'footer.html' %}
-{% endblock %}
 
 </div>
+{% block foot %}
+    {% include 'footer2.html' %}
+{% endblock %}
 
 
-<script>
-// Get the Sidebar
-var mySidebar = document.getElementById("mySidebar");
 
-var overlayBg = document.getElementById("myOverlay");
 
-function w3_open() {
-    if (mySidebar.style.display === 'block') {
-        mySidebar.style.display = 'none';
-        overlayBg.style.display = "none";
-    } else {
-        mySidebar.style.display = 'block';
-        overlayBg.style.display = "block";
-    }
-}
 
-// Close the sidebar with the close button
-function w3_close() {
-    mySidebar.style.display = "none";
-    overlayBg.style.display = "none";
-}
-</script>
 </body>
 </html>
