--- a/accounts/templates/signup2.html
+++ b/accounts/templates/signup2.html
@@ -42,11 +42,11 @@
                           {% csrf_token %}
 
 			    			<div class="form-group">
-			    				<input type="email" name="email" required="" placeholder="E-mail address" id="id_email" class="form-control input-sm">
+			    				<input type="email" name="email" required="" autofocus="autofocus" placeholder="E-mail address" id="id_email" class="form-control input-sm">
 			    			</div>
 
                             <div class="form-group">
-			    				<input type="text" name="username" minlength="1" placeholder="Username" autofocus="autofocus" id="id_username" maxlength="150" required="" class="form-control input-sm" >
+			    				<input type="text" name="username" minlength="1" placeholder="Username"  id="id_username" maxlength="150" required="" class="form-control input-sm" >
 			    			</div>
 
 			    			<div class="row">
