--- a/news/templates/base3.html
+++ b/news/templates/base3.html
@@ -57,10 +57,11 @@
 
 </div>
 </div>
+<div class="w3-main" style="margin-left:250px">
 {% block foot %}
     {% include 'footer.html' %}
 {% endblock %}
-
+</div>
 
 
 <script>
