--- a/news/templates/footer.html
+++ b/news/templates/footer.html
@@ -78,7 +78,7 @@
                             </ul>
                         </div>            </div> <!-- end widget1 -->
 
-                    <div class="col-sm-1 col-md-1 col-lg-4">
+                    <div class="col-sm-1 col-md-1 col-xl-4 col-lg-1">
                         <div id="meta-4" class="widget widgetFooter widget_meta">
                             <!--<h4 class="widgettitle">Subscribe :</h4>-->
 
