--- a/news/templates/results.html
+++ b/news/templates/results.html
@@ -1,6 +1,6 @@
 {% for new in results %}
-  <div>
-    <div>
+  <div class="w3-row w3-padding-45">
+    <div class="w3-container">
       <div>
         <h3><a href="{% url 'news:news-details' new.news_type.type new.slug %}" class="w3-text-teal w3-hover-white">{{ new.title }}</a></h3>
         <p>{{ new.content|truncatewords:25 }}</p>
@@ -9,4 +9,4 @@
     </div>
   </div>
 {% endfor %}
-
+</div>
