--- a/news/templates/results.html
+++ b/news/templates/results.html
@@ -8,5 +8,11 @@
       </div>
     </div>
   </div>
+{% empty %}
+  <div class="w3-row w3-padding-45">
+    <div class="w3-container">
+      <p>"Sorry no news found matching your query "</p>
+    </div>
+  </div>
 {% endfor %}
 </div>
