--- a/news/templates/Navbar.html
+++ b/news/templates/Navbar.html
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Contact us</a></li>
+        <li><a href="/contact/">Contact us</a></li>
       </ul>
     <ul class="nav navbar-nav navbar-right">
         {% if user.is_authenticated %}
