added contact page

--- a/news/templates/footer.html
+++ b/news/templates/footer.html
@@ -57,8 +57,8 @@
                             <h4 class="widgettitle">Importent Page :</h4>
                             <ul>
                                 <li><a href="/"><i class="fa fa-home fa-fw"></i> Home</a></li>
-                                <li><a href="#"><i class="fa fa-link"></i>   Privacy Policy</a></li>
-                                <li><a href="#"><i class="fa fa-envelope fa-fw"></i> Contact Us</a></li>
+                                <li><a href="/pages/privacy-policy/"><i class="fa fa-link"></i>   Privacy Policy</a></li>
+                                <li><a href="/contact/"><i class="fa fa-envelope fa-fw"></i> Contact Us</a></li>
                             </ul>
                         </div>      </div> <!-- end widget1 -->
 
