--- a/accounts/templates/Emailverficationsent.html
+++ b/accounts/templates/Emailverficationsent.html
@@ -1,4 +1,7 @@
 {% extends "base4.html" %}
+{% block side %}
+
+{% endblock %}
 {% block content %}
 <div class="w3-row w3-padding-64">
 <div class="w3-main" style="margin-left:150px">
