--- a/news/templates/results.html
+++ b/news/templates/results.html
@@ -1,10 +1,12 @@
 {% for new in results %}
   <div class="w3-row w3-padding-70">
     <div class="w3-container">
+      <div class="w3-container">
       <div>
         <h3><a href="{% url 'news:news-details' new.news_type.type new.slug %}" class="w3-text-teal w3-hover-white">{{ new.title }}</a></h3>
         <p>{{ new.content|truncatewords:25 }}</p>
           <a href="{% url 'news:news-details' new.news_type.type new.slug %}" class="w3-text-teal w3-hover-white">Read more</a>
+      </div>
       </div>
     </div>
   </div>
