--- a/news/templates/results.html
+++ b/news/templates/results.html
@@ -13,7 +13,9 @@
 {% empty %}
   <div class="w3-row w3-padding-70">
     <div class="w3-container">
+      <div class="w3-container">
       <p>"Sorry no news found matching your query "</p>
+    </div>
     </div>
   </div>
 {% endfor %}
