added contact page6

--- a/news/templates/results.html
+++ b/news/templates/results.html
@@ -11,7 +11,7 @@
     </div>
   </div>
 {% empty %}
-  <div class="w3-row w3-padding-70">
+  <div class="w3-row w3-padding-70" style="margin-top: 20px">
     <div class="w3-container">
       <div class="w3-container">
       <p>"Sorry no news found matching your query "</p>
