--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,5 +1,5 @@
-{% extends 'base4.html' %}
-<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+{% extends "base4.html" %}
+{% load i18n %}
 <style>
   body {
     padding-top: 15px;
@@ -43,7 +43,11 @@
 
 {% endblock %}
 {% block content %}
+{% if form.error_messages %}
+{{ form.errors_messages}}
+{% endif %}
 <div class="col-xs-12" style="height:150px;"></div>
+
 <div class="container">
   <div class="row">
 
@@ -63,30 +67,35 @@
 
       </div>
 
-      <form role="form" method="POST" action="" id="login_form">
+    <form class="login" method="POST" action="{% url 'account_login' %}" id="LoginForm" name="LoginForm">
         {% csrf_token %}
+        {% if form.errors %}
+            {% for value in form.errors.values %}<p>{{ value }}<br></p>{% endfor %}
+        {% endif %}
         <div class="form-group">
-          <label for="id_login">Username or email</label>
-          <input input type="text" name="login" required="" placeholder="Username" autofocus="autofocus" id="id_login" class="form-control">
+            <label for="form.id_login">Username or email</label>
+            <input input type="text" name="login" required="" placeholder="Username" autofocus="autofocus" id="form.id_login" class="form-control">
         </div>
         <div class="form-group">
-          <a class="pull-right" href="/account/password/reset/">Forgot password?</a>
-          <label for="id_password">Password</label>
-          <input type="password" name="password" required="" placeholder="Password" id="id_password" class="form-control">
+            <a class="pull-right" href="/account/password/reset/">Forgot password?</a>
+            <label for="form.id_password">Password</label>
+            <input type="password" name="password" required="" placeholder="Password" id="form.id_password" class="form-control">
         </div>
         <div class="checkbox pull-right">
-          <label>
+            <label>
             <input type="checkbox" name="remember" id="id_remember">
             Remember me </label>
         </div>
         <button type="submit" class="btn btn btn-primary">
           Log In
         </button>
-      </form>
+        {% if redirect_field_value %}
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        {% endif %}
 
-    </div>
-
+    </form>
+  </div>
   </div><div class="col-xs-12" style="height:300px;"></div>
-
+    </div>
 </div>
 {% endblock %}
