--- a/news/templates/acc_active_email.html
+++ b/news/templates/acc_active_email.html
@@ -1,6 +1,6 @@
 {% autoescape off %}
-Hi {{ obj.email }},
+Hi {{ user }},
 Please click on the link to confirm your registration for our Newsletter,
-http://{{ domain }}{% url 'news:activate' uidb64=uid token=token %}
-if wish not recevice them please ignore
+{{ domain }}{% url 'news:activate' uidb64=uid token=token %}
+if you do not remember registering please ignore
 {% endautoescape %}
