--- a/news/templates/results.html
+++ b/news/templates/results.html
@@ -11,10 +11,10 @@
   </div>
 </div>
 {% empty %}
-<div class="w3-row w3-padding-70" style="margin-top: 20px">
+<div class="w3-row w3-padding-80" style="margin-top: 20px">
   <div class="w3-container">
     <div class="w3-container">
-      <p>"Sorry no news found matching your query "</p>
+      <h3>"Sorry no news found matching your query "</h3>
     </div>
   </div>
 </div>
