--- a/accounts/templates/footer.html
+++ b/accounts/templates/footer.html
@@ -105,7 +105,7 @@
                                         <span class="input-group-addon">E-mail :</span>
                                         <input class="form-control" placeholder="Write your email .." type="email"  name="email">
                                         <span class="input-group-btn">
-                                    <button onclick="myFunction()"  class="btn btn-primary" type="submit">Subscribe !</button>
+                                    <button  class="btn btn-primary" type="submit">Subscribe !</button>
                     </span>
 
                                     </div>
@@ -123,8 +123,3 @@
 
 </footer>
 
-<script>
-function myFunction() {
-alert("Thanks for your interest we have send you an email please complete the verification to receive our NewsLetter")
-}
-</script>
