--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -49,53 +49,63 @@
 <div class="col-xs-12" style="height:150px;"></div>
 
 <div class="container">
-  <div class="row">
+    <div class="row">
 
-    <div class="main">
+        <div class="main">
 
-      <h3>Please Log In, or <a href="/account/signup/">Sign Up</a></h3>
-      <div class="row">
-        <div class="col-xs-6 col-sm-6 col-md-6">
-          <a href="/accounts/facebook/login/?process=login" class="btn btn-lg btn-primary btn-block">Facebook</a>
-        </div>
-        <div class="col-xs-6 col-sm-6 col-md-6">
-          <a href="/accounts/google/login/?process=login" class="btn btn-lg btn-info btn-block">Google</a>
-        </div>
-      </div>
-      <div class="login-or">
-        <hr class="hr-or">
+            <h3>Please Log In, or <a href="/account/signup/">Sign Up</a></h3>
+            <br>
+            <div class="row">
+                <div class="col-xs-2 col-sm-2 col-md-2"></div>
 
-      </div>
+                <div class="col-xs-4 col-sm-4 col-md-4">
+                    <a href="/accounts/facebook/login/?process=login" class="btn btn-lg btn-primary btn-block">Facebook</a>
+                </div>
+                <div class="col-xs-4 col-sm-4 col-md-4">
+                    <a href="/accounts/google/login/?process=login" class="btn btn-lg btn-info btn-block">Google</a>
+                </div>
+                <div class="col-xs-2 col-sm-2 col-md-2"></div>
 
-    <form class="login" method="POST" action="{% url 'account_login' %}" id="LoginForm" name="LoginForm">
-        {% csrf_token %}
-        {% if form.errors %}
-            {% for value in form.errors.values %}<p>{{ value }}<br></p>{% endfor %}
-        {% endif %}
-        <div class="form-group">
-            <label for="form.id_login">Username or email</label>
-            <input input type="text" name="login" required="" placeholder="Username" autofocus="autofocus" id="form.id_login" class="form-control">
-        </div>
-        <div class="form-group">
-            <a class="pull-right" href="/account/password/reset/">Forgot password?</a>
-            <label for="form.id_password">Password</label>
-            <input type="password" name="password" required="" placeholder="Password" id="form.id_password" class="form-control">
-        </div>
-        <div class="checkbox pull-right">
-            <label>
-            <input type="checkbox" name="remember" id="id_remember">
-            Remember me </label>
-        </div>
-        <button type="submit" class="btn btn btn-primary">
-          Log In
-        </button>
-        {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-        {% endif %}
+            </div>
+            <div class="login-or">
+                <hr class="hr-or">
 
-    </form>
-  </div>
-  </div><div class="col-xs-12" style="height:300px;"></div>
-    </div>
+            </div>
+                            <div class="col-xs-3 col-sm-3 col-md-3"></div>
+
+<div class="col-xs-6 col-sm-6 col-md-6">
+            <form class="login" method="POST" action="{% url 'account_login' %}" id="LoginForm" name="LoginForm">
+                {% csrf_token %}
+                {% if form.errors %}
+                {% for value in form.errors.values %}<p>{{ value }}<br></p>{% endfor %}
+                {% endif %}
+                <div class="form-group">
+                    <label for="form.id_login">Username or email</label>
+                    <input input type="text" name="login" required="" placeholder="Username" autofocus="autofocus" id="form.id_login" class="form-control">
+                </div>
+                <div class="form-group">
+                    <a class="pull-right" href="/account/password/reset/">Forgot password?</a>
+                    <label for="form.id_password">Password</label>
+                    <input type="password" name="password" required="" placeholder="Password" id="form.id_password" class="form-control">
+                </div>
+                <div class="checkbox pull-right">
+                    <label>
+                        <input type="checkbox" name="remember" id="id_remember">
+                        Remember me </label>
+                </div>
+                <button type="submit" class="btn btn btn-primary">
+                    Log In
+                </button>
+                {% if redirect_field_value %}
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                {% endif %}
+
+            </form>
+</div>
+                            <div class="col-xs-3 col-sm-3 col-md-3"></div>
+
+        </div>
+    </div><div class="col-xs-12" style="height:300px;"></div>
+</div>
 </div>
 {% endblock %}
