--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -22,59 +22,87 @@
 
 
 <div class="col-xs-12" style="height:150px;"></div>
+<div class="container">
+
+	<div class="row">
+
+		<div class="main">
+
+			<h3>Please Sign Up, or Login with social accounts</h3>
+			<br>
+			<center>
+				<div class="row">
+					<div class="col-xs-2 col-sm-2 col-md-2"></div>
+
+					<div class="col-xs-4 col-sm-4 col-md-4">
+						<a href="/accounts/facebook/login/?process=login" class="btn btn-lg btn-primary btn-block">Facebook</a>
+					</div>
+					<div class="col-xs-4 col-sm-4 col-md-4">
+						<a href="/accounts/google/login/?process=login" class="btn btn-lg btn-info btn-block">Google</a>
+					</div>
+					<div class="col-xs-2 col-sm-2 col-md-2"></div>
+
+				</div>
+			</center>
+		</div>
+	</div>
+
+</div>
+<br>
+<br>
 <div>
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-    {% csrf_token %}
-    {% if form.errors %}
-        {% for value in form.errors.values %}<p>{{ value }}<br></p>{% endfor %}
-    {% endif %}
-    <div></div>
-    <div class="container centered">
-        <div class="row centered-form">
-        <div class="col-xs-12 col-sm-8 col-md-8 col-sm-offset-2 col-md-offset-2 centered">
-        	<div class="panel panel-default">
-        		<div class="panel-heading">
-			    		<h3 class="panel-title">Please sign up for NewsCorner <small>It's free!</small></h3>
-			 			</div>
-			 			<div class="panel-body">
-			    		<form role="form" METHOD="post" action="" id="SignupForm">
-                          {% csrf_token %}
+	<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+		{% csrf_token %}
+		{% csrf_token %}
+		{% if form.errors %}
+		{% for value in form.errors.values %}<p>{{ value }}<br></p>{% endfor %}
+		{% endif %}
+		<div></div>
+		<div class="container centered">
+			<div class="row centered-form">
+				<div class="col-xs-12 col-sm-8 col-md-8 col-sm-offset-2 col-md-offset-2 centered">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<h3 class="panel-title">Please sign up for NewsCorner <small>It's free!</small></h3>
+						</div>
+						<div class="panel-body">
+							<form role="form" METHOD="post" action="" id="SignupForm">
+								{% csrf_token %}
 
-			    			<div class="form-group">
-			    				<input type="email" name="email" required="" autofocus="autofocus" placeholder="E-mail address" id="id_email" class="form-control input-sm">
-			    			</div>
+								<div class="form-group">
+									<input type="email" name="email" required="" autofocus="autofocus" placeholder="E-mail address" id="id_email" class="form-control input-sm">
+								</div>
 
-                            <div class="form-group">
-			    				<input type="text" name="username" minlength="1" placeholder="Username"  id="id_username" maxlength="150" required="" class="form-control input-sm" >
-			    			</div>
+								<div class="form-group">
+									<input type="text" name="username" minlength="1" placeholder="Username"  id="id_username" maxlength="150" required="" class="form-control input-sm" >
+								</div>
 
-			    			<div class="row">
-			    				<div class="col-xs-6 col-sm-6 col-md-6">
-			    					<div class="form-group">
-			    						<input type="password" name="password1" required="" id="id_password1" class="form-control input-sm" placeholder="Password">
-			    					</div>
-			    				</div>
-			    				<div class="col-xs-6 col-sm-6 col-md-6">
-			    					<div class="form-group">
-			    						<input type="password" name="password2" required="" id="id_password2" class="form-control input-sm" placeholder="Confirm Password">
-			    					</div>
-			    				</div>
-			    			</div>
+								<div class="row">
+									<div class="col-xs-6 col-sm-6 col-md-6">
+										<div class="form-group">
+											<input type="password" name="password1" required="" id="id_password1" class="form-control input-sm" placeholder="Password">
+										</div>
+									</div>
+									<div class="col-xs-6 col-sm-6 col-md-6">
+										<div class="form-group">
+											<input type="password" name="password2" required="" id="id_password2" class="form-control input-sm" placeholder="Confirm Password">
+										</div>
+									</div>
+								</div>
 
-			    			<input type="submit" value="Register" class="btn btn-info btn-block">
+								<input type="submit" value="Register" class="btn btn-info btn-block">
 
-			    		</form>
-			    	</div>
-	    		</div>
-    		</div>
-    	</div><div class="col-xs-12" style="height:300px;"></div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div><div class="col-xs-12" style="height:300px;"></div>
 
-    </div>
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-</form>
+		</div>
+		{% if redirect_field_value %}
+		<input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+		{% endif %}
+	</form>
 </div>
 </div>
 
