--- a/news/templates/footer.html
+++ b/news/templates/footer.html
@@ -103,9 +103,9 @@
                                     <div class="input-group">
 
                                         <span class="input-group-addon">E-mail :</span>
-                                        <input class="form-control" placeholder="Write your email .." type="email"  name="email">
+                                        <input class="form-control" placeholder="Write your email .." type="email"  name="email" required="True">
                                         <span class="input-group-btn">
-                                    <button onclick="myFunction()" class="btn btn-primary" type="submit">Subscribe !</button>
+                                    <button  class="btn btn-primary" type="submit">Subscribe !</button>
                     </span>
 
                                     </div>
@@ -123,8 +123,4 @@
 
 </footer>
 
-<script>
-function myFunction() {
-alert("Thanks for your interest we have send you an email please complete the verification to receive our NewsLetter")
-}
-</script>
+
