--- a/news/templates/news_details.html
+++ b/news/templates/news_details.html
@@ -35,7 +35,7 @@ $.ajax({
   <div class="w3-row w3-padding-64">
     <div class="w3-container">
         <h1 class="w3-text-teal">{{ news.title }}</h1>
-        <pre>{{ news.content}}</pre>
+        <p>{{ news.content}}</p>
 
 <div class="center">
 {% if news.image %}
