--- a/accounts/templates/Emailverficationsent.html
+++ b/accounts/templates/Emailverficationsent.html
@@ -5,9 +5,10 @@
 {% block content %}
 <div class="w3-row w3-padding-64">
 <div class="w3-main" style="margin-left:150px">
-<p>We have sent an e-mail to you for verification.
+    <h1 class="w3-text-teal">"Confirm E-mail Address"</h1>
+<h4>We have sent an e-mail to you for verification.
 Follow the link provided to finalize the signup process.
-    Please contact us if you do not receive it within a few minutes.</p>
+    Please contact us if you do not receive it within a few minutes.</h4>
 </div>
 </div>
 {% endblock %}
